Adicionando referências finais e ajustes gerais

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -33,6 +33,12 @@
     publisher = "LTC"
 }
 
+@article{gqm,
+	Author = "Victor R. Basili and H. Dieter Rombach",
+	Title = {Goal Question Metric Paradigm},
+	Year = {1994}
+}
+
 @article{cemkaner,
 	Author = "Cem Kaner",
 	Title = {Software Negligence and Testing Coverage},
