--- a/editaveis/metodologia.tex
+++ b/editaveis/metodologia.tex
@@ -103,13 +103,13 @@ Por se tratar de uma instituição aberta ao âmbito de pesquisa na área de Eng
 
 \section{Avaliação da Efetividade do \textit{Framework}}
 
-Para realizar futuramente uma análise da efetividade da aplicação do \textit{framework}, elaborou-se um GQM (\textit{Goal Question Metrics}). A seguir, tem-se uma tabela que resume o objetivo da medição.
+Para realizar futuramente uma análise da efetividade da aplicação do \textit{framework}, elaborou-se um GQM (\textit{Goal Question Metrics}) \cite{gqm}. A seguir, tem-se uma tabela que resume o objetivo da medição.
 
 \begin{table}[h]
 \centering
 \begin{tabular}{ | m{8cm} | m{8cm} | } 
 \hline
-Analisar & A efetividade do \textit{framework} \\ 
+Analisar & A aplicação do \textit{framework} em projetos de desenvolvimento \\ 
 \hline
 Com o propósito de & Melhorar \\ 
 \hline
