--- a/editaveis/referencialteorico.tex
+++ b/editaveis/referencialteorico.tex
@@ -8,7 +8,7 @@ Os conceitos aqui apresentados são importantes pelo fato de demonstrarem plenam
 
 \section{Verificação de \textit{Software}}
 
-A verificação é uma das principais disciplinas da Engenharia de \textit{Software}. A verificação, segundo definição do IEEE (\textit{Institute of Electrical and Eletronics Engineers}), caracteriza-se como o processo de avaliar um sistema, produto ou componente para determinar se os resultados de um passo do respectivo processo de desenvolvimento satisfazem as condições impostas no início do passo. Pelo CMMI (\textit{Capability Maturity Model Integration}), a verificação é tida como uma confirmação de que produtos de trabalho refletem corretamente os requisitos especificados.
+A verificação é uma das principais disciplinas da Engenharia de \textit{Software}. A verificação, segundo definição do IEEE (\textit{Institute of Electrical and Eletronics Engineers}), caracteriza-se como o processo de avaliar um sistema, produto ou componente para determinar se os resultados de um passo do respectivo processo de desenvolvimento satisfazem as condições impostas no início do passo (1012 - IEEE \textit{Standard for System and Software Verification and Validation}). Pelo CMMI (\textit{Capability Maturity Model Integration}), a verificação é tida como uma confirmação de que produtos de trabalho refletem corretamente os requisitos especificados (CMMI-Dev V1.3 \textit{Model}).
 
 As verificações incluem análises estáticas, testes de desenvolvimento (testes de unidade e integração) e revisões \cite{paulafilho}. Nesse âmbito, uma verificação efetiva aumenta a visibilidade do processo de desenvolvimento e reduz os riscos do projeto \cite{verificacao1}.
 
