--- a/tcc.tex
+++ b/tcc.tex
@@ -29,6 +29,8 @@
 \input{editaveis/referencialteorico}
 \input{editaveis/metodologia}
 \input{editaveis/framework}
+\input{editaveis/materiaismetodos}
+\input{editaveis/avaliacaoframework}
 \input{editaveis/consideracoesfinais}
 
 \bookmarksetup{startatroot} 
