Adicionando detalhamento em materiais e métodos

--- a/editaveis/informacoes.tex
+++ b/editaveis/informacoes.tex
@@ -4,7 +4,7 @@
 
 % Dados do trabalho
 \titulo{Framework para Avaliação da Qualidade de Código: Uma Abordagem Baseada em Valor}
-\data{2016}
+\data{2017}
 \palavraChaveUm{Qualidade de Código}
 \palavraChaveDois{Engenharia de Software Baseada em Valor}
 
@@ -15,6 +15,6 @@
 \cdu{02:141:005.6}
 
 % Dados da aprovação do trabalho
-\dataDaAprovacao{05 de dezembro de 2016}
+\dataDaAprovacao{}
 \membroConvidadoUm{Profª Msc. Cristiane Soares Ramos}
 \membroConvidadoDois{Prof. Dr. Sérgio Antônio Andrade de Freitas}
