--- a/editaveis/metodologia.tex
+++ b/editaveis/metodologia.tex
@@ -83,7 +83,7 @@ Como mencionado em seção anterior, a pesquisa-ação será o procedimento téc
 
 A Controladoria Geral do Distrito Federal (CGDF) teve sua estrutura criada por meio do Decreto nº 36.236, de 1º de janeiro de 2015, pelo Governador Rodrigo Rollemberg. Esta Unidade Gestora possui como missão orientar e controlar a gestão pública, com transparência e participação da sociedade.
 
-Interna à CGDF, há uma coordenação de assuntos tecnológicos, a COTEC, que é responsável por desenvolver e manter sistemas para todas as demais coordenações da CGDF. Além dos sistemas internos, tem-se aplicações que são desenvolvidas por empresas privadas ao governo e entregues à COTEC para serem mantidas.
+Interna à CGDF há uma coordenação, a COTEC (Coordenação de Administração de Assuntos Tecnológicos), que é responsável por desenvolver e manter sistemas para todas as demais coordenações da CGDF. Além dos sistemas internos, tem-se aplicações que são desenvolvidas por empresas privadas ao governo e entregues à COTEC para serem mantidas.
 
 A equipe da COTEC é pequena, contando com um total de 10 servidores. São 3 servidores na frente de infraestrutura, 3 na frente de administração de banco de dados e apenas 4 na área de desenvolvimento. O \textit{Scrum} e XP foram adotados recentemente na COTEC.
 
@@ -167,8 +167,9 @@ Será feito o cômputo das respostas atribuídas pelos desenvolvedores aos itens
 \begin{itemize}
 	\item {1 - Concordo Totalmente}.
 	\item {2 - Concordo Parcialmente}.
-	\item {3 - Discordo Parcialmente}.
-	\item {4 - Discordo Totalmente}.
+	\item {3 - Neutro}.
+	\item {4 - Discordo Parcialmente}.
+	\item {5 - Discordo Totalmente}.
 \end{itemize}
 
 É importante ressaltar que a pesquisa será aplicada ao final das entregas de \textit{release} e não ao final de cada \textit{sprint}. Dessa maneira, os desenvolvedores poderão assimilar mais experiências para fornecerem respostas mais concisas ao julgar os itens da pesquisa.
