Adicionando mais aspectos ao capítulo de materiais e métodos

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,3 +1,10 @@
+@book{ddd,
+	author = "Eric Evans",
+	title = "Domain-Driven Design: Tackling Complexity in the Heart of Software",
+	year = "2003",
+	publisher = "Domain Language"
+}
+
 @book{metodologia,
 	author    = "E. MORESI",
     title     = "Metodologia de pesquisa",
