Adicionando refinamentos ao capítulo de materiais e métodos

--- a/editaveis/materiaismetodos.tex
+++ b/editaveis/materiaismetodos.tex
@@ -138,3 +138,16 @@ Para coletar a percepção dos desenvolvedores com relação ao uso do \textit{f
 \includegraphics[width=\textwidth]{figuras/questionario.png}
 \caption{Formulário Eletrônico - Índice de Satisfação dos Desenvolvedores}
 \end{figure}
+
+\section{Planejamento da Aplicação do \textit{Framework}}
+
+Inicialmente, planejou-se uma período de treinamento nas organizações. Na CGDF, a cultura de implementação de testes unitários e realização de inspeções ainda estava em seu estágio inicial. Portanto, foi preparado um treinamento contemplando modelos de implementação de testes unitários para todas as tecnologias utilizadas no desenvolvimento dos projetos selecionados. Adicionalmente, explicitou-se mais conceitos inerentes às inspeções para que os \textit{checklists} propostos pelo \textit{framework} aplicado neste estudo ficassem mais elucidativos.
+
+No Laboratório Fábrica de \textit{Software}, de forma semelhante, também foi promovido um treinamento inicial. Contudo, o foco deste treinamento esteve centralizado na implementação de testes unitários para aplicações \textit{mobile}, uma das principais dificuldades relatadas pela equipe de desenvolvimento do projeto da perícia médica.
+
+Como o \textit{framework} utilizado neste estudo já se caracteriza como um processo alinhado às atividades e práticas do \textit{Scrum}, os ciclos de pesquisa-ação, basicamente, são as \textit{sprints} dos projetos de desenvolvimento. É válido notar que ao final de cada \textit{sprint}, serão realizadas coletas de percepções de forma a aprimorar as atividades propostas pelo \textit{framework}. A seguir, tem-se uma figura que exibe o planejamento inicial dos ciclos de coleta de dados.
+
+\begin{figure}[!h]
+\includegraphics[width=\textwidth]{figuras/planejamento.png}
+\caption{Planejamento inicial - Ciclos de Coleta de Dados}
+\end{figure}
